src/test/ui/parser/unmatched-delimiter-at-end-of-file.stderr
error: this file contains an un-closed delimiter
  --> $DIR/unmatched-delimiter-at-end-of-file.rs:11:64
   |
LL | fn foo() {
   |          - un-closed delimiter                                 ^

error: aborting due to previous error

